Fixed some mobs